# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: firstci.yml
brain_games/: calculator.py  cli.py  game.py  great_comm_div.py  number_even.py  progression.py  set_games.py
brain_games/games/: calc.py  even_number.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime_number.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
gato_naranja_brain_games.egg-info/: PKG-INFO  SOURCES.txt
