[tool.poetry]
name = "gato-naranja_brain_games"
version = "0.7.2"
description = "My first project. Five games named Brain games."
authors = [
	"Alex Parshikov <alex.n.parshikov@gmail.com>"
]
repository = "https://github.com/gato-naranja/python-project-lvl1"
classifiers = [
	"Topic :: Games/Entertainment"
]
packages = [
	{ include = "brain_games" },
]
 
[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
